# crank-nicolson

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
application/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: data.hpp  deepPtr.hpp  grid.hpp
core/src/: data.cpp  grid.cpp
core/tests/: CMakeLists.txt  data_tests.cpp  deepPtr_tests.cpp  grid_tests.cpp  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
tool/: clang-format-stage
